# project-strtucture

./: Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
df_creator/: df_creator.py
docs/: index.md
github/workflows/: ci.yml
tests/: __init__.py  test_df_creator.py
