[tool.poetry]
name = "df_creator"
version = "0.1.0"
description = "Criação de df pandas partindo de 2 listas"
authors = ["elton-datasc <elton-guilherme@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandera = "^0.18.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
