[tool.poetry]
name = "df_creator"
version = "0.1.0"
description = "Criação de df pandas partindo de 2 listas"
authors = ["elton-datasc <elton-guilherme@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandera = "^0.18.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
blue = "^0.9.1"
ruff = "^0.4.1"
pip-audit = "^2.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT','D']

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
preview = true
quote-style = 'single'
